<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/welcomeFragment">
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.leaf.hearingtest.ui.welcome.WelcomeFragment"
        android:label="@string/welcome_title"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_userDetailsFragment"
            app:destination="@id/userDetailsFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_resultFragment"
            app:destination="@id/resultFragment" />
    </fragment>
    <fragment
        android:id="@+id/userDetailsFragment"
        android:name="com.leaf.hearingtest.ui.user.UserDetailsFragment"
        android:label="@string/user_details_title"
        tools:layout="@layout/fragment_user_details" >
        <action
            android:id="@+id/action_userDetailsFragment_to_hearingTestFragment"
            app:destination="@id/hearingTestFragment" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.leaf.hearingtest.ui.results.ResultFragment"
        android:label="@string/result_title"
        tools:layout="@layout/fragment_result"/>
    <fragment
        android:id="@+id/hearingTestFragment"
        android:name="com.leaf.hearingtest.ui.hearing.HearingTestFragment"
        android:label="@string/hearing_title"
        tools:layout="@layout/fragment_hearing_test" >
        <argument
            android:name="userModel"
            app:argType="com.leaf.hearingtest.ui.user.UserModel" />
        <action
            android:id="@+id/action_hearingTestFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
        <action
            android:id="@+id/action_hearingTestFragment_to_resultFragment"
            app:destination="@id/resultFragment" />
    </fragment>
</navigation>