<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.leaf.hearingtest.ui.hearing.HearingTestViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hearing_test_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hearing_test_copy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:text="@string/hearing_copy"
                android:textSize="@dimen/text_size_list_item_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:layout_marginBottom="16dp"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_list_item_2"
                app:layout_constraintBottom_toTopOf="@+id/secret_code_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hearing_test_copy"
                tools:text="Difficulty:" />


            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:layout_marginBottom="16dp"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_list_item_2"
                app:layout_constraintBottom_toTopOf="@+id/secret_code_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hearing_test_copy"
                tools:text="Score:" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/secret_code_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:hint="@string/secret_code"
                app:endIconMode="clear_text"
                app:endIconTint="?android:attr/textColorPrimary"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/score"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:text="@={viewmodel.userAnswers}"
                    android:textColor="?android:attr/textColorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1.0">


                <TextView
                    android:id="@+id/question_index"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_list_item_2"
                    tools:text="5 of 10" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit_btn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:text="@string/button_label_submit"
                    android:textColor="@color/white"
                    android:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exit_btn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:text="@string/button_label_exit_test"
                    android:textColor="@color/white" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/loader"
            layout="@layout/layout_progress_indicator" />

        <include
            android:id="@+id/error"
            layout="@layout/layout_error_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>